--- a/pages/about.html
+++ b/pages/about.html
@@ -170,7 +170,7 @@
                                 <img src="../assets/images/resources/about-page-img.jpg" alt="">
                             </div>
                             <div class="about-page__founded">
-                                <h5>Founded <br> in 2020</h5>
+                                <h5>Founded <br> in 2019</h5>
                             </div>
                         </div>
                     </div>
@@ -182,8 +182,15 @@
                             </div>
                             <p class="about-page__right-text-1">We’re committed to delivering the best IT solutions
                                 for your businesses</p>
-                            <p class="about-page__right-text-2">We stand out as a team of tech-pro to provide solutions and Services to assist the development of information technology in our society such as homes, 
-							schools, cooperate offices, etc. Our hands stretch forth to the whole of Africa as a continent.</p>
+                            <p class="about-page__right-text-2">Welcome to IPness IT Solutions, a leading provider of technology solutions for businesses of all sizes. 
+                                Founded in 2019, our mission is to empower our clients with innovative and reliable technology solutions that help them achieve their goals and stay ahead of the competition.</p>
+                                At IPness, we believe in putting our clients first. We work closely with each of our clients to understand their unique needs and challenges, and to develop customized solutions that meet their specific requirements.
+                                 Our team of experienced and skilled professionals is dedicated to delivering high-quality services and support, and to building long-term relationships with our clients.</p> Our key areas of expertise include website development,
+                                  cloud computing, cybersecurity, and digital transformation. We offer a range of services, including website development and customization, IT consulting, cloud migration and management, cybersecurity assessments and solutions, 
+                                  digital transformation strategies and Networking.</p>
+                                 At IPness, we are committed to delivering innovative and sustainable technology solutions that drive business success. We believe in building strong partnerships with our clients, and in working together to achieve shared goals. 
+                                 Contact us today to learn more about how we can help your business succeed in the digital age.                                 
+                                </p>
                             <div class="about-page__points-box">
                                 <ul class="list-unstyled about-page__points">
                                     <li>
@@ -263,7 +270,7 @@
                                         <div class="counter-two__icon">
                                             <span class="icon-consulting"></span>
                                         </div>
-                                        <h3 class="odometer" data-count="57">00</h3>
+                                        <h3 class="odometer" data-count="18">00</h3>
                                         <p class="counter-two__text">Expert Teams</p>
                                     </li>
                                 </ul>
@@ -726,8 +733,9 @@
                                 <div class="footer-widget__column footer-widget__about">
                                     <h3 class="footer-widget__title">About</h3>
                                     <div class="footer-widget__about-text-box">
-                                        <p class="footer-widget__about-text">We are team of highly skilled and experienced IT professionals who are well-versed in various aspects of information technology.
-										</p>
+                                        <p class="footer-widget__about-text">We are team of highly skilled and experienced IT professionals who are well-versed in various aspects of information technology. 
+                                            This expertise can be beneficial in providing comprehensive IT solutions, technical support, and consulting services to meet your business needs.
+                                        </p> 
                                     </div>
                                     <ul class="footer-widget__about-contact list-unstyled">
                                         <li>
