--- a/pages/contact.html
+++ b/pages/contact.html
@@ -259,7 +259,7 @@
         <!--Google Map Start-->
         <section class="google-map">
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4562.753041141002!2d-118.80123790098536!3d34.152323469614075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80e82469c2162619%3A0xba03efb7998eef6d!2sCostco+Wholesale!5e0!3m2!1sbn!2sbd!4v1562518641290!5m2!1sbn!2sbd"
+                src="https://www.google.com/maps/place/IPness+IT+Solution/@5.2728442,-1.0155385,17z/data=!3m1!4b1!4m6!3m5!1s0xfde11b9013be06d:0xc6d7bcb844d59d5b!8m2!3d5.2728442!4d-1.0155385!16s%2Fg%2F11ssx8n5c8?hl=en-GB"
                 class="google-map__one" allowfullscreen></iframe>
 
         </section>
