--- a/pages/faq.html
+++ b/pages/faq.html
@@ -174,8 +174,7 @@
                                     </div>
                                     <div class="accrodion-content">
                                         <div class="inner">
-                                            <p>There are many variations of passages the majority have suffered
-                                                alteration in some fo injected humour, or randomised words believable.
+                                            <p>
                                             </p>
                                         </div><!-- /.inner -->
                                     </div>
@@ -186,20 +185,18 @@
                                     </div>
                                     <div class="accrodion-content">
                                         <div class="inner">
-                                            <p>There are many variations of passages the majority have suffered
-                                                alteration in some fo injected humour, or randomised words believable.
+                                            <p>
                                             </p>
                                         </div><!-- /.inner -->
                                     </div>
                                 </div>
                                 <div class="accrodion last-chiled">
                                     <div class="accrodion-title">
-                                        <h4>Mobile Applications</h4>
+                                        <h4>IoTs</h4>
                                     </div>
                                     <div class="accrodion-content">
                                         <div class="inner">
-                                            <p>There are many variations of passages the majority have suffered
-                                                alteration in some fo injected humour, or randomised words believable.
+                                            <p>
                                             </p>
                                         </div><!-- /.inner -->
                                     </div>
@@ -216,8 +213,7 @@
                                     </div>
                                     <div class="accrodion-content">
                                         <div class="inner">
-                                            <p>There are many variations of passages the majority have suffered
-                                                alteration in some fo injected humour, or randomised words believable.
+                                            <p>
                                             </p>
                                         </div><!-- /.inner -->
                                     </div>
@@ -228,8 +224,7 @@
                                     </div>
                                     <div class="accrodion-content">
                                         <div class="inner">
-                                            <p>There are many variations of passages the majority have suffered
-                                                alteration in some fo injected humour, or randomised words believable.
+                                            <p>
                                             </p>
                                         </div><!-- /.inner -->
                                     </div>
@@ -240,8 +235,7 @@
                                     </div>
                                     <div class="accrodion-content">
                                         <div class="inner">
-                                            <p>There are many variations of passages the majority have suffered
-                                                alteration in some fo injected humour, or randomised words believable.
+                                            <p>
                                             </p>
                                         </div><!-- /.inner -->
                                     </div>
@@ -453,7 +447,7 @@
                                 <div class="site-footer__bottom-inner">
                                     <div class="site-footer__bottom-left">
                                         <p class="site-footer__bottom-text">© Copyrights, 2021 <a
-                                                href="#">BracketWeb</a></p>
+                                                href="#">IPness Ltd.</a></p>
                                     </div>
                                     <div class="site-footer__bottom-right">
                                         <ul class="list-unstyled site-footer__bottom-menu">
@@ -491,7 +485,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:needhelp@packageName__.com">info@ipness.com</a>
+                    <a href="mailto:needhelp@packageName__.com">info@ipness-one.com</a>
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
