--- a/index.html
+++ b/index.html
@@ -736,12 +736,12 @@
                                     <img src="assets/images/team/team-one-img-3.jpg" alt="">
                                 </div>
                                 <div class="team-one__content">
-                                    <h4 class="team-one__name">Rose ford</h4>
-                                    <p class="team-one__title">Designer</p>
+                                    <h4 class="team-one__name">Appiah Kumah Miracle</h4>
+                                    <p class="team-one__title">Full-satck Developer</p>
                                 </div>
                                 <div class="team-one__hover">
-                                    <h4 class="team-one__hover-name">Rose ford</h4>
-                                    <p class="team-one__hover-title">Designer</p>
+                                    <h4 class="team-one__hover-name">Appiah Kumah Miracle</h4>
+                                    <p class="team-one__hover-title">Full-satck Developer</p>
                                     <div class="team-one__social">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -816,12 +816,12 @@
                                     <img src="assets/images/team/team-one-img-3.jpg" alt="">
                                 </div>
                                 <div class="team-one__content">
-                                    <h4 class="team-one__name">Rose ford</h4>
-                                    <p class="team-one__title">Designer</p>
+                                    <h4 class="team-one__name">Appiah Kumah Miracle</h4>
+                                    <p class="team-one__title">Full-satck Developer</p>
                                 </div>
                                 <div class="team-one__hover">
-                                    <h4 class="team-one__hover-name">Rose ford</h4>
-                                    <p class="team-one__hover-title">Designer</p>
+                                    <h4 class="team-one__hover-name">Appiah Kumah Miracle</h4>
+                                    <p class="team-one__hover-title">Full-satck Developer</p>
                                     <div class="team-one__social">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -896,12 +896,12 @@
                                     <img src="assets/images/team/team-one-img-3.jpg" alt="">
                                 </div>
                                 <div class="team-one__content">
-                                    <h4 class="team-one__name">Rose ford</h4>
-                                    <p class="team-one__title">Designer</p>
+                                    <h4 class="team-one__name">Appiah Kumah Miracle</h4>
+                                    <p class="team-one__title">Full-satck Developer</p>
                                 </div>
                                 <div class="team-one__hover">
-                                    <h4 class="team-one__hover-name">Rose ford</h4>
-                                    <p class="team-one__hover-title">Designer</p>
+                                    <h4 class="team-one__hover-name">Appiah Kumah Miracle</h4>
+                                    <p class="team-one__hover-title">Full-satck Developer</p>
                                     <div class="team-one__social">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                         <a href="#"><i class="fab fa-facebook"></i></a>
