--- a/pages/team.html
+++ b/pages/team.html
@@ -217,12 +217,12 @@
                                 <img src="../assets/images/team/team-one-img-3.jpg" alt="">
                             </div>
                             <div class="team-one__content">
-                                <h4 class="team-one__name">Davide Turkson</h4>
-                                <p class="team-one__title">Financial Advisor</p>
+                                <h4 class="team-one__name"> Appiah Kumah Miracle</h4>
+                                <p class="team-one__title">Full-satck Developer</p>
                             </div>
                             <div class="team-one__hover">
-                                <h4 class="team-one__hover-name">Davide Turkson</h4>
-                                <p class="team-one__hover-title">Financial Advisor</p>
+                                <h4 class="team-one__hover-name">Appiah Kumah Miracle</h4>
+                                <p class="team-one__hover-title">Full-satck Developer</p>
                                 <div class="team-one__social">
                                     <a href="#"><i class="fab fa-twitter"></i></a>
                                     <a href="#"><i class="fab fa-facebook"></i></a>
@@ -283,11 +283,11 @@
                                 <img src="../assets/images/team/team-page-6.jpg" alt="">
                             </div>
                             <div class="team-one__content">
-                                <h4 class="team-one__name">David cooper</h4>
+                                <h4 class="team-one__name">Andoh-Jeffery</h4>
                                 <p class="team-one__title">Web Developer</p>
                             </div>
                             <div class="team-one__hover">
-                                <h4 class="team-one__hover-name">David cooper</h4>
+                                <h4 class="team-one__hover-name">Andoh-Jeffery</h4>
                                 <p class="team-one__hover-title">Web Developer</p>
                                 <div class="team-one__social">
                                     <a href="#"><i class="fab fa-twitter"></i></a>
