--- a/pages/faq.html
+++ b/pages/faq.html
@@ -169,8 +169,7 @@
                             <div class="accrodion-grp faq-one-accrodion" data-grp-name="faq-one-accrodion2">
                                 <div class="accrodion">
                                     <div class="accrodion-title">
-                                        <h4>Marketing Strategies for your Business
-</h4>
+                                        <h4>How do I choose the right IT service company for my business?</h4>
                                     </div>
                                     <div class="accrodion-content">
                                         <div class="inner">
@@ -181,7 +180,7 @@
                                 </div>
                                 <div class="accrodion active">
                                     <div class="accrodion-title">
-                                        <h4>digital and social markeitng expenses</h4>
+                                        <h4>How much does it cost to hire an IT service company?</h4>
                                     </div>
                                     <div class="accrodion-content">
                                         <div class="inner">
@@ -209,7 +208,7 @@
                             <div class="accrodion-grp faq-one-accrodion" data-grp-name="faq-one-accrodion1">
                                 <div class="accrodion">
                                     <div class="accrodion-title">
-                                        <h4>We Help to Create Visual Strategies</h4>
+                                        <h4>How does an IT service company ensure data security and confidentiality?</h4>
                                     </div>
                                     <div class="accrodion-content">
                                         <div class="inner">
@@ -231,7 +230,7 @@
                                 </div>
                                 <div class="accrodion last-chiled">
                                     <div class="accrodion-title">
-                                        <h4>We help you to get good Cctv Surveillance</h4>
+                                        <h4>What is the process for requesting IT services from a service company?</h4>
                                     </div>
                                     <div class="accrodion-content">
                                         <div class="inner">
