--- a/index.html
+++ b/index.html
@@ -1000,7 +1000,7 @@
                                     </div>
                                 </div>
                                 <div class="testimonial-one__client-details">
-                                    <h4 class="testimonial-one__client-name">john smith</h4>
+                                    <h4 class="testimonial-one__client-name">john Mensah</h4>
                                     <p class="testimonial-one__client-title">customer</p>
                                 </div>
                             </div>
