--- a/pages/about.html
+++ b/pages/about.html
@@ -572,8 +572,7 @@
                         <div class="testimonial-two__carousel owl-theme owl-carousel">
                             <!--Testimonial One Single-->
                             <div class="testimonial-one__single">
-                                <p class="testimonial-one__text">"We were looking for an affordable marketing company and IPness company delivered. 
-								They manage our blog and social media accounts and produce our brochures. They took the time to understand who we are as a 
+                                <p class="testimonial-one__text">"They took the time to understand who we are as a 
 								company and gave us a few amazing marketing plans to choose from. We wholeheartedly recommend IPness to everyone."
                                 <div class="testimonial-one__client-info">
                                     <div class="testimonial-one__client-img">
@@ -590,8 +589,8 @@
                             </div>
                             <!--Testimonial One Single-->
                             <div class="testimonial-one__single">
-                                <p class="testimonial-one__text">"We were lookingfor an affordable internet service in our remote office and IPness company delivered.
-								They manage to get internet at our office. They took the time to understand ourissue and get them to resolve it and suggested monthly plans to choosefrom.
+                                <p class="testimonial-one__text">"the gave us good internet service in our remote office and IPness company delivered.
+								They manage to get internet at our office. They took the time to understand our issue and get them to resolve it and suggested monthly plans to choosefrom.
 								We wholeheartedly recommend IPness to everyone."
                                 </p>
                                 <div class="testimonial-one__client-info">
