--- a/pages/about.html
+++ b/pages/about.html
@@ -357,12 +357,12 @@
                                     <img src="../assets/images/team/team-one-img-3.jpg" alt="">
                                 </div>
                                 <div class="team-one__content">
-                                    <h4 class="team-one__name">Davide Turkson</h4>
-                                    <p class="team-one__title">Financial Advisor</p>
+                                    <h4 class="team-one__name">Appiah Kumah Miracle</h4>
+                                    <p class="team-one__title">Full-satck Developer</p>
                                 </div>
                                 <div class="team-one__hover">
-                                    <h4 class="team-one__hover-name">Davide Turkson</h4>
-                                    <p class="team-one__hover-title">Financial Advisor</p>
+                                    <h4 class="team-one__hover-name">Appiah Kumah Miracle</h4>
+                                    <p class="team-one__hover-title">Full-satck Developer</p>
                                     <div class="team-one__social">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -437,12 +437,12 @@
                                     <img src="../assets/images/team/team-one-img-3.jpg" alt="">
                                 </div>
                                 <div class="team-one__content">
-                                    <h4 class="team-one__name">Davide Turkson</h4>
-                                    <p class="team-one__title">Financial Advisor</p>
+                                    <h4 class="team-one__name">Appiah Kumah Miracle</h4>
+                                    <p class="team-one__title">Full-satck Developer</p>
                                 </div>
                                 <div class="team-one__hover">
-                                    <h4 class="team-one__hover-name">Davide Turkson</h4>
-                                    <p class="team-one__hover-title">Financial Advisor</p>
+                                    <h4 class="team-one__hover-name">Appiah Kumah Miracle</h4>
+                                    <p class="team-one__hover-title">Full-satck Developer</p>
                                     <div class="team-one__social">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                         <a href="#"><i class="fab fa-facebook"></i></a>
@@ -517,12 +517,12 @@
                                     <img src="../assets/images/team/team-one-img-3.jpg" alt="">
                                 </div>
                                 <div class="team-one__content">
-                                    <h4 class="team-one__name">Davide Turkson</h4>
-                                    <p class="team-one__title">Financial Advisor</p>
+                                    <h4 class="team-one__name">Appiah Kumah Miracle</h4>
+                                    <p class="team-one__title">Full-satck Developer</p>
                                 </div>
                                 <div class="team-one__hover">
-                                    <h4 class="team-one__hover-name">Davide Turkson</h4>
-                                    <p class="team-one__hover-title">Financial Advisor</p>
+                                    <h4 class="team-one__hover-name">Appiah Kumah Miracle</h4>
+                                    <p class="team-one__hover-title">Full-satck Developer</p>
                                     <div class="team-one__social">
                                         <a href="#"><i class="fab fa-twitter"></i></a>
                                         <a href="#"><i class="fab fa-facebook"></i></a>
