--- a/pages/team.html
+++ b/pages/team.html
@@ -196,11 +196,11 @@
                             </div>
                             <div class="team-one__content">
                                 <h4 class="team-one__name">Perdita Oduro</h4>
-                                <p class="team-one__title">Human Resourse</p>
+                                <p class="team-one__title">Human resources</p>
                             </div>
                             <div class="team-one__hover">
                                 <h4 class="team-one__hover-name">Perdita Oduro</h4>
-                                <p class="team-one__hover-title">Human Resourse</p>
+                                <p class="team-one__hover-title">Human resources</p>
                                 <div class="team-one__social">
                                     <a href="#"><i class="fab fa-twitter"></i></a>
                                     <a href="#"><i class="fab fa-facebook"></i></a>
