fixed_google_map

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                                     <div class="main-slider__content">
                                         <p>Welcome to our digital  world</p>
                                         <h2>the Right Tech <br> Solution for <br> Business</h2>
-                                        <a href="about.html" class="thm-btn">Discover More</a>
+                                        <a href="./pages/about.html" class="thm-btn">Discover More</a>
                                     </div>
                                 </div>
                             </div>
@@ -1428,10 +1428,10 @@
                                 <div class="footer-widget__column footer-widget__explore clearfix">
                                     <h3 class="footer-widget__title">Explore</h3>
                                     <ul class="footer-widget__explore-list list-unstyled clearfix">
-                                        <li><a href="services.html">What We Offer</a></li>
-                                        <li><a href="about.html">Our Story</a></li>
-                                        <li><a href="blog.html">Latest News</a></li>
-                                        <li><a href="about.html">Help Center</a></li>
+                                        <li><a href="./pages/services.html">What We Offer</a></li>
+                                        <li><a href="./pages/about.html">Our Story</a></li>
+                                        <li><a href="./pages/blog.html">Latest News</a></li>
+                                        <li><a href="./pages/about.html">Help Center</a></li>
                                     </ul>
                                 </div>
                             </div>
