--- a/pages/about.html
+++ b/pages/about.html
@@ -781,10 +781,10 @@
                                 <div class="footer-widget__column footer-widget__explore clearfix">
                                     <h3 class="footer-widget__title">Explore</h3>
                                     <ul class="footer-widget__explore-list list-unstyled clearfix">
-                                        <li><a href="services.html">What We Offer</a></li>
-                                        <li><a href="about.html">Our Story</a></li>
-                                        <li><a href="blog.html">Latest News</a></li>
-                                        <li><a href="about.html">Help Center</a></li>
+                                        <li><a href="./services.html">What We Offer</a></li>
+                                        <li><a href="./about.html">Our Story</a></li>
+                                        <li><a href="./blog.html">Latest News</a></li>
+                                        <li><a href="./about.html">Help Center</a></li>
                                     </ul>
                                 </div>
                             </div>
