--- a/pages/contact.html
+++ b/pages/contact.html
@@ -258,9 +258,10 @@
 
         <!--Google Map Start-->
         <section class="google-map">
-            <iframe
+            <!-- <iframe
                 src="https://www.google.com/maps/place/IPness+IT+Solution/@5.2728442,-1.0155385,17z/data=!3m1!4b1!4m6!3m5!1s0xfde11b9013be06d:0xc6d7bcb844d59d5b!8m2!3d5.2728442!4d-1.0155385!16s%2Fg%2F11ssx8n5c8?hl=en-GB"
-                class="google-map__one" allowfullscreen></iframe>
+                class="google-map__one" allowfullscreen></iframe> -->
+                <iframe  class="google-map__one" allowfullscreen src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3972.9348700237947!2d-1.0155385!3d5.2728442!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfde11b9013be06d%3A0xc6d7bcb844d59d5b!2sIPness%20IT%20Solution!5e0!3m2!1sen!2sgh!4v1682110658979!5m2!1sen!2sgh" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
         </section>
         <!--Google Map End-->
