--- a/pages/graphic-design.html
+++ b/pages/graphic-design.html
@@ -402,11 +402,11 @@
 								<div class="footer-widget__column footer-widget__links clearfix">
 									<h3 class="footer-widget__title">Links</h3>
 									<ul class="footer-widget__links-list list-unstyled clearfix">
-										<li><a href="about.html">About Us</a></li>
-										<li><a href="about.html">Our Mission</a></li>
-										<li><a href="team.html">Meet the Team</a></li>
-										<li><a href="project.html">Our Projects</a></li>
-										<li><a href="contact.html">Contact</a></li>
+										<li><a href="./about.html">About Us</a></li>
+										<li><a href="./about.html">Our Mission</a></li>
+										<li><a href="./team.html">Meet the Team</a></li>
+										<li><a href="./project.html">Our Projects</a></li>
+										<li><a href="./contact.html">Contact</a></li>
 									</ul>
 								</div>
 							</div>
@@ -414,10 +414,10 @@
 								<div class="footer-widget__column footer-widget__explore clearfix">
 									<h3 class="footer-widget__title">Explore</h3>
 									<ul class="footer-widget__explore-list list-unstyled clearfix">
-										<li><a href="services.html">What We Offer</a></li>
-										<li><a href="about.html">Our Story</a></li>
-										<li><a href="blog.html">Latest News</a></li>
-										<li><a href="about.html">Help Center</a></li>
+										<li><a href="./services.html">What We Offer</a></li>
+										<li><a href="./about.html">Our Story</a></li>
+										<li><a href="./blog.html">Latest News</a></li>
+										<li><a href="./about.html">Help Center</a></li>
 									</ul>
 								</div>
 							</div>
