changed_service_filename

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                                 <li class="dropdown">
                                     <a href="#">Services</a>
                                     <ul>
-                                        <li><a href="./pages/services2.html">Services</a></li>
+                                        <li><a href="./pages/services.html">Services</a></li>
                                         <li><a href="./pages/mobile-applications.html">IoTs</a></li>
                                         <li><a href="./pages/digital-marketing.html">Networking & Cloud Infrastructure</a></li>
                                         <li><a href="./pages/graphic-design.html">Graphic Designing</a></li>
