--- a/pages/why-choose.html
+++ b/pages/why-choose.html
@@ -91,7 +91,7 @@
                                     <a href="#">Services</a>
                                     <ul>
                                         
-                                        <li><a href="services2.html">Services</a></li>
+                                        <li><a href="services.html">Services</a></li>
                                         <li><a href="mobile-applications.html">IoTs</a></li>
                                         <li><a href="digital-marketing.html">Networking & Cloud Infrastructure		</a></li>
                                         <li><a href="graphic-design.html">Graphic Designing </a></li>
