--- a/pages/about.html
+++ b/pages/about.html
@@ -88,7 +88,7 @@
                                     </ul>
                                 </li>
                                 <li class="dropdown">
-                                    <a href="services2.html">Services</a>
+                                    <a href="services.html">Services</a>
                                     <ul>
                                         
                                         <li><a href="mobile-applications.html">IoTs</a></li>
@@ -135,7 +135,7 @@
 
         <!--Page Header Start-->
         <section class="page-header">
-            <div class="page-header-bg" style="background-image: url(assets/images/backgrounds/page-header-bg.jpg)">
+            <div class="page-header-bg" style="background-image: url(../assets/images/backgrounds/page-header-bg.jpg)">
             </div>
             <div class="page-header-border"></div>
             <div class="page-header-border page-header-border-two"></div>
