--- a/pages/blog.html
+++ b/pages/blog.html
@@ -91,7 +91,7 @@
                                     <a href="#">Services</a>
                                     <ul>
                                         
-                                        <li><a href="services2.html">services</a></li>
+                                        <li><a href="services.html">services</a></li>
                                         <li><a href="mobile-applications.html">IoTs</a></li>
                                         <li><a href="digital-marketing.html">Networking & Cloud Infrastructure </a></li>
                                         <li><a href="graphic-design.html">Graphic Designings </a></li>
