--- a/pages/checkout.html
+++ b/pages/checkout.html
@@ -92,7 +92,7 @@
                                     <a href="#">Services</a>
                                     <ul>
                                         
-                                        <li><a href="services2.html">Services</a></li>
+                                        <li><a href="services.html">Services</a></li>
                                         <li><a href="mobile-applications.html">Mobile Applications </a></li>
                                         <li><a href="digital-marketing.html">Digital Marketings </a></li>
                                         <li><a href="graphic-design.html">Graphic Designings </a></li>
