--- a/pages/team.html
+++ b/pages/team.html
@@ -88,10 +88,10 @@
                                     </ul>
                                 </li>
                                 <li class="dropdown">
-                                    <a href="services2.html">Services</a>
+                                    <a href="services.html">Services</a>
                                     <ul>
                                         <!-- <li><a href="services.html">Services</a></li>
-                                        <li><a href="services2.html">Services Two</a></li> -->
+                                        <li><a href="services.html">Services Two</a></li> -->
                                         <li><a href="mobile-applications.html">IoTs</a></li>
                                         <li><a href="digital-marketing.html">Networking & Cloud Infrastructure</a></li>
                                         <li><a href="graphic-design.html">Graphic Designings </a></li>
