--- a/pages/about.html
+++ b/pages/about.html
@@ -589,8 +589,8 @@
                             </div>
                             <!--Testimonial One Single-->
                             <div class="testimonial-one__single">
-                                <p class="testimonial-one__text">"the gave us good internet service in our remote office and IPness company delivered.
-								They manage to get internet at our office. They took the time to understand our issue and get them to resolve it and suggested monthly plans to choosefrom.
+                                <p class="testimonial-one__text">"They gave us good internet service in our remote office and IPness company delivered.
+								They managed to get internet at our office. They took the time to understand our issue and get them to resolve it and suggested monthly plans to choose from.
 								We wholeheartedly recommend IPness to everyone."
                                 </p>
                                 <div class="testimonial-one__client-info">
