--- a/pages/project.html
+++ b/pages/project.html
@@ -183,8 +183,8 @@
                             <div class="project-one__img">
                                 <img src="../assets/images/resources/project-page-img-1.jpg" alt="">
                                 <div class="project-one__hover">
-                                    <p class="project-one__tagline">Graphic</p>
-                                    <h3 class="project-one__title"><a href="project-details.html">Fimlor Experience</a>
+                                    <p class="project-one__tagline">Homes/Organizations</p>
+                                    <h3 class="project-one__title"><a href="project-details.html">Solar Installation</a>
                                     </h3>
                                 </div>
                             </div>
@@ -196,8 +196,8 @@
                             <div class="project-one__img">
                                 <img src="../assets/images/resources/project-page-img-2.jpg" alt="">
                                 <div class="project-one__hover">
-                                    <p class="project-one__tagline">Graphic</p>
-                                    <h3 class="project-one__title"><a href="project-details.html">Fimlor Experience</a>
+                                    <p class="project-one__tagline">Homes/Organizations</p>
+                                    <h3 class="project-one__title"><a href="project-details.html">Networking Installations</a>
                                     </h3>
                                 </div>
                             </div>
@@ -209,8 +209,8 @@
                             <div class="project-one__img">
                                 <img src="../assets/images/resources/project-page-img-3.jpg" alt="">
                                 <div class="project-one__hover">
-                                    <p class="project-one__tagline">Graphic</p>
-                                    <h3 class="project-one__title"><a href="project-details.html">Fimlor Experience</a>
+                                    <p class="project-one__tagline">Homes/Organizations</p>
+                                    <h3 class="project-one__title"><a href="project-details.html">Wi-Fi Installations/a>
                                     </h3>
                                 </div>
                             </div>
@@ -222,8 +222,8 @@
                             <div class="project-one__img">
                                 <img src="../assets/images/resources/project-page-img-4.jpg" alt="">
                                 <div class="project-one__hover">
-                                    <p class="project-one__tagline">Graphic</p>
-                                    <h3 class="project-one__title"><a href="project-details.html">Fimlor Experience</a>
+                                    <p class="project-one__tagline">Homes/Organizations</p>
+                                    <h3 class="project-one__title"><a href="project-details.html">Web development</a>
                                     </h3>
                                 </div>
                             </div>
@@ -235,8 +235,8 @@
                             <div class="project-one__img">
                                 <img src="../assets/images/resources/project-page-img-5.jpg" alt="">
                                 <div class="project-one__hover">
-                                    <p class="project-one__tagline">Graphic</p>
-                                    <h3 class="project-one__title"><a href="project-details.html">Fimlor Experience</a>
+                                    <p class="project-one__tagline">Homes/Organizations</p>
+                                    <h3 class="project-one__title"><a href="project-details.html">Internet TV streamline</a>
                                     </h3>
                                 </div>
                             </div>
@@ -248,7 +248,7 @@
                             <div class="project-one__img">
                                 <img src="../assets/images/resources/project-page-img-6.jpg" alt="">
                                 <div class="project-one__hover">
-                                    <p class="project-one__tagline">Graphic</p>
+                                    <p class="project-one__tagline">Homes/Organizations</p>
                                     <h3 class="project-one__title"><a href="project-details.html">Fimlor Experience</a>
                                     </h3>
                                 </div>
