removed_project_dropdonwn_from_project_nav

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                         <!--Portfolio One Single-->
                         <div class="project-one__single">
                             <div class="project-one__img">
-                                <img src="assets/images/resources/project-one-img-4.jpg" alt="">
+                                <img src="assets/images/resources/project-one-img-4.jpg" alt="" width="270px" height="370px">
                                 <div class="project-one__hover project-one__hover-pl-40">
                                     <p class="project-one__tagline">Homes</p>
                                     <h3 class="project-one__title"><a href="project-details.html">Home WiFi Distribution</a>
