--- a/pages/social-marketing.html
+++ b/pages/social-marketing.html
@@ -102,11 +102,11 @@
 									</ul>
 								</li>
 								<li class="dropdown">
-									<a href="#">Projects</a>
-									<ul>
+									<a href="project.html">Projects</a>
+									<!-- <ul>
 										<li><a href="project.html">Projects</a></li>
 										<li><a href="project-details.html">Project Details</a></li>
-									</ul>
+									</ul> -->
 								</li>
 								 
 								<li class="dropdown">
