--- a/index.html
+++ b/index.html
@@ -1248,7 +1248,7 @@
                                         <img src="assets/images/blog/blog-one-person-img-1.jpg" alt="">
                                     </div>
                                     <div class="blog-one__person-content">
-                                        <p>by Mike Hardson</p>
+                                        <p>by Prince Sam</p>
                                     </div>
                                 </div>
                             </div>
@@ -1280,7 +1280,7 @@
                                         <img src="assets/images/blog/blog-one-person-img-1.jpg" alt="">
                                     </div>
                                     <div class="blog-one__person-content">
-                                        <p>by Mike Hardson</p>
+                                        <p>by Prince Sam</p>
                                     </div>
                                 </div>
                             </div>
@@ -1312,7 +1312,7 @@
                                         <img src="assets/images/blog/blog-one-person-img-1.jpg" alt="">
                                     </div>
                                     <div class="blog-one__person-content">
-                                        <p>by Mike Hardson</p>
+                                        <p>by Prince Sam</p>
                                     </div>
                                 </div>
                             </div>
