--- a/pages/about.html
+++ b/pages/about.html
@@ -590,7 +590,7 @@
                             <!--Testimonial One Single-->
                             <div class="testimonial-one__single">
                                 <p class="testimonial-one__text">"They gave us good internet service in our remote office and IPness company delivered.
-								They managed to get internet at our office. They took the time to understand our issue and get them to resolve it and suggested monthly plans to choose from.
+								They managed to get internet at our office. They took time to understand our issue and got them to resolve it and they suggested monthly plans to choose from.
 								We wholeheartedly recommend IPness to everyone."
                                 </p>
                                 <div class="testimonial-one__client-info">
@@ -609,7 +609,7 @@
                             <!--Testimonial One Single-->
                             <div class="testimonial-one__single">
                                 <p class="testimonial-one__text">Ipness is one of the best companies I have known, their delivery service is very phenomenon.
-								They are known to have all solutions for tech issues and service.
+								They are known to have all solutions for tech issues and Services.
                                 </p>
                                 <div class="testimonial-one__client-info">
                                     <div class="testimonial-one__client-img">
@@ -858,7 +858,7 @@
                 </li>
                 <li>
                     <i class="fa fa-phone-alt"></i>
-                    <a href="tel:+1 689 267 3697">+1 689 267 3697</a>
+                    <a href="tel:+1 689 267 3697">+1 689 267 3697 </p>/+233 59 215 6776</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
