--- a/pages/project.html
+++ b/pages/project.html
@@ -249,7 +249,7 @@
                                 <img src="../assets/images/resources/project-page-img-6.jpg" alt="">
                                 <div class="project-one__hover">
                                     <p class="project-one__tagline">Homes/Organizations</p>
-                                    <h3 class="project-one__title"><a href="project-details.html">Internet TV streamline</a>
+                                    <h3 class="project-one__title"><a href="project-details.html">IP Telephones</a>
                                     </h3>
                                 </div>
                             </div>
