update: cybersecurity link

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home One || IPness || IPness HTML Template For Business</title>
+    <title>IPness</title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png" />
@@ -95,7 +95,7 @@
                                         <li><a href="pages/graphic-design">Graphic Designing</a></li>
                                         <li><a href="pages/website-development">Website Developments</a></li>
                                         <li><a href="pages/social-marketing">Social Marketings</a></li>
-                                        <li><a href="pages/cyberSecurity">CyberSecurity</a></li>
+                                        <li><a href="pages/CyberSecurity">CyberSecurity</a></li>
                                     </ul>
                                 </li>
                                 <li>
