--- a/pages/team.html
+++ b/pages/team.html
@@ -97,7 +97,7 @@
                                         <li><a href="graphic-design">Graphic Designings </a></li>
                                         <li><a href="website-development">Website Developments </a></li>
                                         <li><a href="social-marketing">Social Marketings </a></li>
-                                        <li><a href="cyberSecurity">CyberSecurity </a></li>
+                                        <li><a href="CyberSecurity">CyberSecurity </a></li>
                                     </ul>
                                 </li>
                                 <li>
