--- a/pages/services.html
+++ b/pages/services.html
@@ -201,8 +201,8 @@
                             <div class="services-three__single-content">
                                 <h2 class="services-three__title"><a href="website-development">Cloud  <br>design
                                Infrastructure (Paas)</a></h2>
-                                <p class="services-three__text">Lorem ipsum dolor sit amet, consect etur adi pisicing
-                                    elit sed do dunt ut labore.</p>
+                                <p class="services-three__text">Cloud networking offers connectivity to and between applications and workloads across clouds,
+                                     on-premises data centers, and edge networks. It's vital to performance, security, and efficient management of hybrid cloud </p>
                                 <a class="services-three__arrow" href="website-development"><span
                                         class="icon-right-arrow"></span></a>
                             </div>
@@ -223,8 +223,7 @@
                             <div class="services-three__single-content">
                                 <h2 class="services-three__title"><a href="website-development">Business & <br>
                                         Home Wi-Fi</a></h2>
-                                <p class="services-three__text">Lorem ipsum dolor sit amet, consect etur adi pisicing
-                                    elit sed do dunt ut labore.</p>
+                                <p class="services-three__text">We install, monitor and support your WiFi network. Never worry about large capital expenditures, broken or out-dated equipment, or having your front desk support WiFi. </p>
                                 <a class="services-three__arrow" href="website-development"><span
                                         class="icon-right-arrow"></span></a>
                             </div>
